Hard-coded personalized greeting message; changed order first image then message; changed promting in AI to not great members

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,23 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# IDE / OS specific
+.DS_Store
+.vscode/
+.idea/
+
+# Environment
+.env
+*.env
+.venv/
+venv/
+
+# Uploads (temporary files from your app.py)
+uploads/
