--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,8 @@ services:
       - "3000:80"
     environment:
       - VITE_API_URL=http://localhost:5001
+    depends_on:
+      - backend
     profiles:
       - prod
 
