--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - .:/app
       - /app/node_modules
     environment:
-      - VITE_API_URL=http://localhost:5001
+      - VITE_API_BASE_URL=http://localhost:5001
     command: npm run dev -- --host 0.0.0.0
     profiles:
       - dev
@@ -65,7 +65,7 @@ services:
     ports:
       - "3000:80"
     environment:
-      - VITE_API_URL=http://localhost:5001
+      - VITE_API_BASE_URL=http://localhost:5001
     depends_on:
       - backend
     profiles:
