--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - FLASK_ENV=${FLASK_ENV:-production}
       - PYTHONPATH=/app
       - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:3000,http://localhost:5173}
+      - GO_BRIDGE_BASE_URL=http://whatsapp-bridge:8082
       - WHATSAPP_BRIDGE_URL=http://whatsapp-bridge:8082
     volumes:
       - backend_uploads:/app/uploads
@@ -43,7 +44,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://localhost:5001
+      - VITE_API_BASE_URL=http://localhost:5001
       - VITE_BRIDGE_URL=http://localhost:8082
     volumes:
       - ./src:/app/src:delegated
@@ -107,7 +108,7 @@ services:
     networks:
       - club-chat-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8082/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8082/status"]
       interval: 30s
       timeout: 10s
       retries: 3
