--- a/nginx.conf
+++ b/nginx.conf
@@ -55,7 +55,7 @@ http {
         location /api/ {
             limit_req zone=api burst=20 nodelay;
             
-            proxy_pass http://backend/;
+            proxy_pass http://backend/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
